// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unknown plugin as a function: as a function 1`] = `

import dedent from "../../macro";

dedent(\`
  some stuff
\`);

      ↓ ↓ ↓ ↓ ↓ ↓

'some stuff';


`;

exports[`unknown plugin as a template string: as a template string 1`] = `

import dedent from "../../macro";

dedent\`
  some stuff
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

'some stuff';


`;

exports[`unknown plugin evaluated: evaluated 1`] = `

import dedent from "../../macro";
import { line, second } from "../external";

dedent\`
  first \${line}
    \${second}
    third
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { line, second } from '../external';
\`first \${line}
  \${second}
  third\`;


`;

exports[`unknown plugin explicit newline: explicit newline 1`] = `

import dedent from "../../macro";

dedent\`
  <p>
    Hello world!
  </p>

\`;

      ↓ ↓ ↓ ↓ ↓ ↓

'<p>\\n  Hello world!\\n</p>';


`;

exports[`unknown plugin explicit newlines: explicit newlines 1`] = `

import dedent from "../../macro";

dedent\`
  \\n<p>
    Hello world!
  </p>\\n
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

'\\n<p>\\n  Hello world!\\n</p>\\n';


`;

exports[`unknown plugin expressions: expressions 1`] = `

import dedent from "../../macro";

dedent\`
  first line
    second
    third
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

'first line\\n  second\\n  third';


`;

exports[`unknown plugin multiple indentations: multiple indentations 1`] = `

import dedent from "../../macro";

dedent\`
    first
      second
          third
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

'first\\n  second\\n      third';


`;
